test/corpus/comments.txt
=================================
Line comments
=================================

// Comment

/// Still a comment

//

---

(source_file
  (line_comment)
  (line_comment)
  (line_comment)
)

=================================
Block comments
=================================

/* Single line */

/*
 * Multi-line
 */

 /*   
  Still multi-line   
  */

---

(source_file
  (block_comment)
  (block_comment)
  (block_comment)
)

=================================
Nested block comments
:skip
=================================

/*
 * /* Single line */
 */

/*   
   Still multi-line  
    /* 
     * Nested comment
     */ 
 */

/*   
  /* 
 */

 /*   
  */ 
 */

---

(source_file
  (block_comment)
  (block_comment)
)
