test/corpus/declarations.txt
=================================
Const declarations
=================================

a :: true;

a : int : 1 + 2;

---

(source_file
  (const_declaration
    (identifier)
    (boolean_literal))
      
  (const_type_declaration
    (identifier)
    (builtin_type)
    (binary_expression
      (integer_literal)
      (integer_literal)))
)

=================================
Var declarations
=================================

a : int;

a := 123.456;

a : int = "hello";

---

(source_file
  (variable_declaration
    (identifier)
    (builtin_type))

  (variable_declaration
    (identifier)
    (float_literal))
      
  (variable_declaration
    (identifier)
    (builtin_type)
    (string_literal
      (string_content)))
)

=================================
Import declarations
=================================

#import "Basic";

Basic :: #import "Basic";

using Basic :: #import "Basic";

File :: #import,file "files/file.jai";
Dir :: #import,dir "files";
#import,string "factorial :: ";

---

(source_file
  (import_declaration
    (string_literal
      (string_content)))

  (import_declaration
    (identifier)
    (string_literal
      (string_content)))

  (import_declaration
    (identifier)
    (string_literal
      (string_content)))

  (import_declaration
    (identifier)
    (string_literal
      (string_content)))

  (import_declaration
    (identifier)
    (string_literal
      (string_content)))

  (import_declaration
    (string_literal
      (string_content)))
)

=================================
Struct declarations
=================================

Foo :: struct {}

Address :: struct {
  street_name: string;
  street_number: int = 123;
  postal_code : string : "H0H 0H0";
  country :: "Canada";
  planet := "Earth";
}

---

(source_file
  (struct_declaration
    (identifier))

    (struct_declaration
      (identifier)
      (variable_declaration
        (identifier)
        (builtin_type))
      (variable_declaration
        (identifier)
        (builtin_type)
        (integer_literal))
      (const_type_declaration
        (identifier)
        (builtin_type)
        (string_literal
          (string_content)))
      (const_declaration
        (identifier)
        (string_literal
          (string_content)))
      (variable_declaration
        (identifier)
        (string_literal
          (string_content))))
)

=================================
Enum declarations
=================================

Colors :: enum {}

Colors :: enum {
  RED;
  BLUE;
  GREEN;
}

Colors :: enum u16 {
  RED :: 0;
  BLUE :: 1;
  GREEN :: 2;
}

---

(source_file
  (enum_declaration
    (identifier))

  (enum_declaration
    (identifier)
    (identifier)
    (identifier)
    (identifier))

  (enum_declaration
    (identifier)
    (builtin_type)
    (const_declaration
      (identifier)
      (integer_literal))
    (const_declaration
      (identifier)
      (integer_literal))
    (const_declaration
      (identifier)
      (integer_literal)))
)

=================================
Procedure declarations
:skip
=================================

main :: () {}

foo :: (a: int) {}

foo :: () -> int {}

foo :: (a: int) -> int {}

foo :: (a: int = 9, b: string = "hello", c := 4, d := "world") -> int, string {}

---

(source_file
  (procedure_declaration
    (identifier)
    (parameters))
  (procedure_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (builtin_type))))
  (procedure_declaration
    (identifier)
    (parameters)
    (return_type
      (builtin_type)))
)
